Rename app Reglomatic

--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="Ask Rules" />
+    <meta name="apple-mobile-web-app-title" content="Reglomatic" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
