--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Reglomatic" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4646157012195573"
+      crossorigin="anonymous"
+    ></script>
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
