--- a/src/app.html
+++ b/src/app.html
@@ -1,15 +1,36 @@
 <!doctype html>
 <html lang="fr">
   <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9ESGP9VNHZ"></script>
+    <!-- Google Consent Mode v2 — refusé par défaut -->
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
+      gtag('consent', 'default', {
+        analytics_storage: 'denied',
+        ad_storage: 'denied',
+        ad_user_data: 'denied',
+        ad_personalization: 'denied',
+        wait_for_update: 500
+      });
       gtag('js', new Date());
+      gtag('config', 'G-9ESGP9VNHZ', { send_page_view: false });
 
-      gtag('config', 'G-9ESGP9VNHZ');
+      // Restaurer le consentement si déjà accordé
+      (function () {
+        try {
+          var c = localStorage.getItem('cookie_consent');
+          if (c === 'granted') {
+            gtag('consent', 'update', {
+              analytics_storage: 'granted',
+              ad_storage: 'granted',
+              ad_user_data: 'granted',
+              ad_personalization: 'granted'
+            });
+          }
+        } catch (e) {}
+      })();
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9ESGP9VNHZ"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#4f46e5" />
